--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,15 @@
         margin-top:10px;
         margin-bottom: 10px;
     }
+    .web_login{
+        height:140px;
+        width: 332px;
+    }
 </style>
+
+    {% if current_user.is_authenticated %}
+        Hi {{ current_user.username }}!
+    {% endif %}
 
 <div class="page-header" style="float: left">
     <h3 style="color: red;">Index Page</h3>
@@ -24,6 +32,7 @@
 
 <div class="xxxx," style="float: right">
     <div class="web_login">
+        {% if current_user.username == 'Guest' %}
         <fieldset>
             <legend>登录区</legend>
             <div class="input-box">
@@ -36,6 +45,11 @@
                 <input type="button" value="Log In" onclick="SubmitLogin(this);">
             </div>
         </fieldset>
+        {% else %}
+            <h1 style="color: deeppink">你好 {{ current_user.username }}!</h1>
+            <a href="/logout">退出</a>
+        {% endif %}
+
     </div>
     <div class="web_reg">
         <fieldset style="margin-top: 20px;">
@@ -51,10 +65,19 @@
             </div>
         </fieldset>
     </div>
-
-
-
-
+    <div style="margin-top: 10px;">
+        <fieldset>
+            <div style="position: relative;height: 200px;width: 300px;">
+                <div style="position: absolute;top:12px;right: 0;">
+                    {% if current_user.username == 'Guest' %}
+                    <a href="/login">更多内容</a>
+                    {% else %}
+                    <a href="/">更多内容</a>
+                    {% endif %}
+                </div>
+            </div>
+        </fieldset>
+    </div>
 </div>
 
 
@@ -94,7 +117,7 @@
             dataType: 'json',
             success: function (arg){
                 if (arg.status){
-                    window.location.href = '/show';
+                    window.location.href = '/';
                 }else{
                     alert('login_error');
                 }
